# search_game

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yaml  release.yaml
src/: game.xlsx  main.rs
src/gui/: app.rs
src/model/: game.rs
src/utils/: build_index.rs  mod.rs  read_xlsx.rs  search_game.rs
